[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/BackButton.gd" type="Script" id=1]
[ext_resource path="res://text/PlayfairDisplay-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="BackButton" type="Button"]
margin_left = 322.0
margin_top = 5.0
margin_right = 379.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Voltar"
flat = true
script = ExtResource( 1 )
scene_path = "res://scenes/Menu.tscn"

[connection signal="mouse_entered" from="." to="." method="_on_BackButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BackButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="on_BackButton_pressed"]
